tests/ui/parser/intersection-patterns-1.stderr
error: pattern on wrong side of `@`
  --> $DIR/intersection-patterns-1.rs:17:9
   |
LL |         Some(x) @ y => {}
   |         -------^^^-
   |         |         |
   |         |         binding on the right, should be on the left
   |         pattern on the left, should be on the right
   |
help: switch the order
   |
LL -         Some(x) @ y => {}
LL +         y @ Some(x) => {}
   |

error: pattern on wrong side of `@`
  --> $DIR/intersection-patterns-1.rs:27:9
   |
LL |         1 ..= 5 @ e => {}
   |         -------^^^-
   |         |         |
   |         |         binding on the right, should be on the left
   |         pattern on the left, should be on the right
   |
help: switch the order
   |
LL -         1 ..= 5 @ e => {}
LL +         e @ 1..=5 => {}
   |

error: aborting due to 2 previous errors

